# sediment

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  PRD.md  README.md  TODO.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
dashboard/: app.py
datasets/anage/: config.yml  report_blocks.json
datasets/anage/data/: release.html
datasets/anage/scaffold/: _stg_anage.llm.yml  _stg_anage.yml  mart_life_history_strategy.proposed.sql  mart_longevity_by_taxonomy.proposed.sql  mart_metabolic_allometry.proposed.sql  mart_metabolic_scaling.proposed.sql  mart_species_life_history.proposed.sql  stg_anage.llm.sql  stg_anage.sql
datasets/nba/: config.yml  report_blocks.json
datasets/nba/scaffold/: _nba__stg_games_index.yml  _nba__stg_player_boxscores.yml  _nba__stg_team_boxscores.yml  mart_game_results_with_odds.proposed.sql  mart_team_game_performance.proposed.sql  nba__stg_games_schedule.sql  nba__stg_player_boxscores.sql
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: _marts.yml  anage__mart_aging_outliers.sql  anage__mart_longevity_by_class.sql  anage__mart_reproductive_rate_scaling.sql  mart_aging_outliers.sql  mart_longevity_by_class.sql  mart_reproductive_rate_scaling.sql  nba__mart_player_game_with_team_context.sql  nba__mart_road_shooters.sql
dbt_project/models/staging/: _nba__stg_games_schedule.yml  _sources.yml  _stg_anage.yml  anage__stg_anage.sql  nba__stg_games_index.sql  nba__stg_team_boxscores.sql  stg_anage.sql
demo/: RUNBOOK.md  reset.sh
engine/: __init__.py  _llm.py  charting.py  config.py  ingest.py  modeling.py  orchestrate.py  profile.py  registry.py  report_config.py  scaffold.py
engine/query/: __init__.py  agent.py  cli.py  conversation.py  dry_run.py  execution.py  generation.py  grounding.py  intent.py  multihop.py  orchestrator.py  plausibility.py  reviewer.py  static_validation.py  trace.py  translation.py  warehouse.py
evals/: golden_questions.yaml  harness.py
presentation/: README.md  index.html
tests/: conftest.py  test_config.py  test_evals.py  test_grounding.py  test_ingest.py  test_modeling_guard.py  test_packaging.py  test_profile.py  test_read_only_guard.py  test_scaffold.py  test_static_validation.py
